# smee

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE-3RD-PARTY  LICENSE_3RD_PARTY  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  codeql.yml  docs.yaml  lint.yaml
0.10.1/: 404.html  index.html  objects.inv  sitemap.xml
0.10.1/development/: index.html
0.10.1/examples/: index.html
0.10.1/reference/: index.html
0.12.1/: 404.html  index.html  sitemap.xml
0.12.1/development/: index.html
0.12.1/examples/: index.html
0.12.1/reference/: index.html
0.12.1/scripts/: gen_ref_pages.py
0.12.1/search/: search_index.json
0.13.0/: 404.html  index.html  objects.inv  sitemap.xml
0.13.0/development/: index.html
0.13.0/examples/: index.html
0.13.0/reference/: index.html
0.13.0/search/: search_index.json
0.14.0/: 404.html  index.html  sitemap.xml
0.14.0/development/: index.html
0.14.0/examples/: index.html
0.14.0/reference/: index.html
0.14.0/search/: search_index.json
0.14.1/: 404.html  index.html  sitemap.xml
0.14.1/development/: index.html
0.14.1/examples/: index.html
0.14.1/reference/: index.html
0.14.1/search/: search_index.json
0.15.0/: 404.html  index.html  sitemap.xml
0.15.0/development/: index.html
0.15.0/examples/: index.html
0.15.0/reference/: index.html
devtools/conda-envs/: meta.yaml  test-env.yaml
devtools/envs/: base.yaml
docs/: Makefile  README.md  api.rst  conf.py  development.md  environment.yml  index.rst  make.bat
examples/: README.md  compute-energy.ipynb  conformer-minimization.ipynb  conformer-minimization.py  custom-handler.ipynb  md-simulations.ipynb  parameter-gradients.ipynb  parameter-gradients.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/examples/: index.html
latest/reference/: index.html
latest/search/: search_index.json
regression/: 01-split-molecule-set.py  02-compute-energies.py  03-concat-energies.py  README.md
smee/: __init__.py  _constants.py  _models.py  _version.py  geometry.py  optimize.py  utils.py
smee/converters/: __init__.py  openmm.py
smee/ff/: __init__.py  _ff.py  nonbonded.py  valence.py
smee/mm/: __init__.py  _config.py  _converters.py  _fe.py  _mm.py  _ops.py  _reporters.py  _utils.py
smirnoffee/: __init__.py  _version.py  exceptions.py  geometry.py  potentials.py  smirnoff.py  utils.py
(+200 files in other folders)
